# tensorrt_yolox

./: .gitignore  CMakeLists.txt  package.xml
include/ailia/: ailia.h  ailia_audio.h  ailia_call.h  ailia_classifier.h  ailia_detector.h  ailia_feature_extractor.h  ailia_format.h  ailia_pose_estimator.h
include/ailia_yolox/: ailia_yolox.hpp  ailia_yolox_node.hpp
include/tensorrt_yolox/: tensorrt_yolox.hpp
launch/: tensorrt_yolox.launch.xml  yolox.launch.xml
src/: ailia_yolox.cpp  ailia_yolox_node.cpp  tensorrt_yolox.cpp  tensorrt_yolox_node.cpp  yolox_single_image_inference_node.cpp
